--- a/Deploy/Kubernetes/manifests/opensis_db-svc.yml
+++ b/Deploy/Kubernetes/manifests/opensis_db-svc.yml
@@ -4,6 +4,8 @@ metadata:
   name: opensis_db
   annotations:
     prometheus.io/scrape: 'true'
+    prometheus.io/path: /metrics 
+    prometheus.io/port:   '3307'
   namespace: opensis
   labels:
     name: opensis_db
