--- a/Deploy/Kubernetes/manifests/opensis_1.0-pvc.yml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-pvc.yml
@@ -4,8 +4,9 @@ metadata:
   name: opensis-pvc
   namespace: opensis
 spec:
+  storageClassName: local-storage
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 2Gi
+      storage: 1Gi
