--- a/Deploy/Kubernetes/monitoring/prometheus-service.yaml
+++ b/Deploy/Kubernetes/monitoring/prometheus-service.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   selector: 
     app: prometheus-server
-  type: NodePort  
+  type: LoadBalancer
   ports:
-    - port: 8080
+    - port: 9090
       targetPort: 9090 
       nodePort: 30000
