--- a/Deploy/Kubernetes/manifests/opensis-secret.yml
+++ b/Deploy/Kubernetes/manifests/opensis-secret.yml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
+  namespace: opensis
 type: Opaque
 data:
   opensisdb-password: ZmFrZXBhc3N3b3Jk
