--- a/Deploy/Kubernetes/manifests/opensis_1.0-pvc.yml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-pvc.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: opensis-pvc
+  name: 'opensis-pvc'
   namespace: opensis
 spec:
   storageClassName: local-storage
