--- a/Deploy/Kubernetes/manifests/opensis_1.0-dep.yml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-dep.yml
@@ -1,29 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: opensis_1.0
+  name: 'opensis'
   annotations:
     prometheus.io/scrape: 'true'
   labels:
-    name: opensis_1.0
+    name: 'opensis'
   namespace: opensis
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: opensis_1.0
+      name: 'opensis'
   template:
     metadata:
       labels:
-        name: opensis_1.0
+        name: 'opensis'
     spec:
       containers:
-      - name: opensis_1.0
+      - name: 'opensis'
         image: gladysgodwin/opensis:1.0
         resources:
           limits:
-            memory: "200Mi"
-            cpu: "200m"
+            memory: "800Mi"
+            cpu: "600m"
           requests:
             cpu: "200m"
             memory: "200Mi"
