--- a/Deploy/Kubernetes/manifests/opensis_1.0-pv.yaml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-pv.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-   name: opensis-pv
+   name: 'opensis-pv'
    namespace: opensis
 spec:
   capacity:
