--- a/Deploy/Kubernetes/manifests/opensis_1.0-svc.yml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-svc.yml
@@ -1,21 +1,19 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
-  name: opensis_1.0
+  name: 'opensis'
   annotations:
     prometheus.io/scape: 'true'
     prometheus.io/port:   '5001'
   labels:
-    name: opensis_1.0
+    name: 'opensis'
   namespace: opensis
-  
-
 spec:
-  type: loadBalancer
+  type: LoadBalancer
   ports: 
   - port: 5000
     targetPort: 5001
     
   selector:
-    name: opensis_1.0
+    name: 'opensis'
 
