--- a/Deploy/Kubernetes/manifests/opensis_db-dep.yml
+++ b/Deploy/Kubernetes/manifests/opensis_db-dep.yml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: opensis_1.0-db
+  name: 'opensis-db'
   labels:
-    name: opensis_1.0-db
+    name: 'opensis-db'
   namespace: opensis
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: opensis_1.0-db
+      app: 'opensis-db'
   template:
     metadata:
       labels:
-        app: opensis_1.0-db
+        app: 'opensis-db'
     spec:
       volumes:
-        - name: data-volume
+        - name: 'data-volume'
           persistentVolumeClaim:
             claimName: opensis-pvc
       containers:
-      - name: opensis_1.0-db
-        image: gladysgodwin/opensis:1.0_db
+      - name: 'opensis-db'
+        image: 'gladysgodwin/opensis:1.0_db'
         resources:
           limits:
-            memory: "200Mi"
+            memory: "600Mi"
             cpu: "200m"
           requests:
             cpu: "200m"
@@ -40,8 +40,8 @@ spec:
               secretKeyRef:
                 name: mysql-secret
                 key: opensis-database
-        command: 
-          - --mysql-mode=
+        #command: 
+         # - --mysql-mode=""
         ports:
         - name: mysql
           containerPort: 3306
