--- a/Deploy/Kubernetes/manifests/opensis_1.0-dep.yml
+++ b/Deploy/Kubernetes/manifests/opensis_1.0-dep.yml
@@ -20,7 +20,23 @@ spec:
     spec:
       containers:
       - name: 'opensis'
-        image: gladysgodwin/theopensis-erp:1.2
+        image: gladysgodwin/opensis-classic_opensis:latest
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: mysql-secret
+                key: opensisdb-password
+          - name: MYSQL_DATABASE
+            valueFrom:
+              secretKeyRef:
+                name: mysql-secret
+                key: opensis-database
+          - name: MYSQL_HOSTNAME
+            valueFrom:
+              secretKeyRef:
+                key: opensis-hostname
+                name: mysql-secret
         resources:
           limits:
             memory: "1000Mi"
@@ -31,32 +47,26 @@ spec:
         ports:
         - containerPort: 5000
         securityContext:
-          runAsUser: 1000
-          runAsGroup: 3000
-          runAsNonRoot: true
+          runAsUser: 33
+          runAsGroup: 33
           capabilities:
             drop:
               - all
             add:
               - NET_BIND_SERVICE
-          readOnlyRootFilesystem: true
         livenessProbe:
-          httpGet:
-            path: /health
-            port: 80
+          tcpSocket:
+            port: 5000
           initialDelaySeconds: 300
           periodSeconds: 3
         readinessProbe:
-          httpGet:
-            path: /health
-            port: 80
+          tcpSocket:
+            port: 5000
           initialDelaySeconds: 180
           periodSeconds: 3
         volumeMounts:
         - name: data-volume
           mountPath: /var/www/html
-        - name: data-volume
-          mountPath: /var/run/apache2/
       volumes:
       - name: 'data-volume'
         persistentVolumeClaim:
